[project]
name = "test-power-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
